--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,10 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
+#just to make it unique, each one
 one:
-  name: MyString
-  email: MyString
+  name: alberttt
+  email: aaaa@gmail.com
 
 two:
-  name: MyString
-  email: MyString
+  name: zzzzzaaa
+  email: zzzz@gmail.com
